# codex-usage-profiler

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: reproducibility.yml
docs/: critical-review.md  dashboard-final-card-inventory.md  dashboard-final-interaction-contract.md  session-learning-autoresearch.md
ops/config/: collector.example.json
ops/grafana/: loki-datasource.yml
ops/launchd/: com.alxs.codex-usage-collector.plist
ops/systemd/: codex-usage-collector.service  codex-usage-collector.timer  codex-usage-dashboard.service  codex-usage-lan-proxy.service  codex-usage-report.service  codex-usage-report.timer
samples/: demo-report.json
scripts/: session-learning-autoresearch.sh
src/codex_usage_profiler/: __init__.py  analysis.py  attribution.py  cli.py  codexbar.py  collector.py  config.py  dashboard.py  ingest.py  learning.py  learning_cli.py  models.py  paperclip.py  quota.py  reporting.py  syslog_util.py  util.py
tests/: dashboard_e2e.mjs  test_collector.py  test_dashboard.py  test_learning_miner.py  test_profiler.py
tests/fixtures/: codex-v8.json  codexbar_cost.json  codexbar_usage.json  complete.jsonl  history_codex.json  learning_claude.jsonl  learning_cookie.jsonl  learning_duplicate_a.jsonl  learning_duplicate_b.jsonl  learning_generic_command_after_patch.jsonl  learning_git_fetch_noise.jsonl  learning_linear.jsonl  learning_loop.jsonl  learning_no_validation_a.jsonl  learning_no_validation_b.jsonl  learning_object_role.jsonl  learning_pi.jsonl  learning_preamble_noise.jsonl  (+6 more)
(+29 files in other folders)
